# rust-finprim

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  docs-header.html
.github/workflows/: docs.yml
benches/: bench_tests.rs  my_benchmark.rs
src/: amort_dep_tax.rs  amort_tax.rs  derivatives.rs  error.rs  floatlike.rs  lib.rs  rate.rs  rounding.rs  tvm.rs
src/amort_dep_tax/: amort.rs  dep.rs  mod.rs  structs.rs  tax.rs
src/derivatives/: mod.rs  pv.rs  wacc.rs
src/rate/: apr_ear.rs  cagr.rs  irr.rs  mirr.rs  mod.rs  pct_change.rs  twr.rs
src/rate/irr/: irr.rs  mod.rs
src/tvm/: fv.rs  pmt.rs  pv.rs
src/utils/: halley.rs  mod.rs  newton_raphson.rs
