[package]
name = "rust_finprim"
version = "0.4.0"
authors = ["Dane Skalski (daneski13)"]
edition = "2021"
description = "Various finance and accounting calculations/formulas implemented Rust"
readme = "./README.md"
repository = "https://github.com/daneski13/rust-finprim"
documentation = "https://daneski13.github.io/rust-finprim/rust_finprim/index.html"
license = "MIT"
keywords = ["finance", "math", "accounting", "excel", "no_std"]
categories = ["finance", "mathematics", "no-std"]
rust-version = "1.78.0"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
rust_decimal = { version = "1.37", default-features = false, features = [
	"maths",
] }
rust_decimal_macros = "1.37"
serde = { default-features = false, features = [
	"derive",
], optional = true, version = "1.0" }

[features]
default = ["std"]
std = ["rust_decimal/std"]
serde = ["dep:serde", "rust_decimal/serde"]

[dev-dependencies]
criterion = "0.5.1"
serde_json = "1.0.117"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./src/docs-header.html"]

[[bench]]
name = "my_benchmark"
harness = false
