[package]
name = "rust_finprim"
version = "0.5.0"
authors = ["Dane Skalski (daneski13)"]
edition = "2021"
description = "Various finance and accounting calculations/formulas implemented Rust"
readme = "./README.md"
repository = "https://github.com/daneski13/rust-finprim"
documentation = "https://daneski13.github.io/rust-finprim/rust_finprim/index.html"
license = "MIT"
keywords = ["finance", "math", "accounting", "excel", "no_std"]
categories = ["finance", "mathematics", "no-std"]
rust-version = "1.78.0"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
crabtime = { version = "1.1.3", default-features = false }
rust_decimal = { version = "1.37", default-features = false, features = [
	"maths",
], optional = true }
rust_decimal_macros = { version = "1.37", optional = true }
serde = { default-features = false, features = [
	"derive",
], optional = true, version = "1.0" }
libm = { version = "0.2", optional = true }

[features]
default = ["std"]
rust_decimal = ["dep:rust_decimal", "dep:rust_decimal_macros"]
serde = ["dep:serde", "rust_decimal?/serde"]
std = ["rust_decimal?/std", "serde?/std"]
no_std = ["dep:libm"]


[dev-dependencies]
criterion = "0.7"
serde_json = "1.0"
# rust_decimal = { version = "1.37", default-features = false, features = [
# 	"maths",
# ] }
# rust_decimal_macros = "1.37"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./docs-header.html"]

[[bench]]
name = "bench_tests"
harness = false
